--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -78,7 +78,8 @@
   align-items: center;
   flex-direction: column;
   justify-content: center;
-  box-shadow: 1px 1px 1px 1px rgb(225, 220, 220);
+  /* box-shadow: 1px 1px 1px 1px rgb(225, 220, 220); */
+  box-shadow: -10px 5px 30px rgb(156, 156, 159);
 }
 .form-heading {
   font-size: 2rem;
@@ -96,7 +97,7 @@
 }
 .form {
   text-align: center;
-  box-shadow: 0px 0px 1px 3px rgb(236, 236, 244);
+  box-shadow: -10px 5px 30px rgb(156, 156, 159);
   border-radius: 10px;
 }
 input {
@@ -132,7 +133,6 @@ input {
   width: 100%;
   margin: 0 auto;
   padding: 0.5rem;
-  box-shadow: 0px 0px 1px 3px rgb(231, 231, 247);
   display: flex;
   flex-direction: column;
 }
@@ -177,6 +177,14 @@ h3 {
 .menu-btn {
   display: none;
 }
+.display-none {
+  display: none;
+}
+.green {
+  color: green;
+  text-decoration: underline;
+}
+
 /*  */
 @media (max-width: 768px) {
   .color-white-mq {
