--- a/views/forgatePassword.ejs
+++ b/views/forgatePassword.ejs
@@ -1,12 +1,23 @@
 <% include persists/header%>
+
+
+    <!--  -->
     <section>
-        <div class="container height-full">
-            <form action="/users/forget-password" method="post">
-                <input type="email" name="email1" id="" placeholder="email1">
-                <input type="email" name="email2" id="" placeholder="email2">
-                <input type="text" name="message" id="" placeholder="message">
-                <input type="submit">
-            </form>
+        <div class="container height-full  flex justify-center align-center">
+            <div class="padingp5 box-shadow width-40  width-100-mq" id="otp-form-div">
+                <form class="flex align-center flex-direction-column" action="/users/forget-password" method="post">
+                    <h3 class="margin-tbp5"> Write your email</h3 class="mar">
+                    <%if(error){%>
+                        <p class="error">
+                            <%=error%>
+                        </p>
+                        <%}%>
+                            <input class="width-100" type="email" name="email1" id="" placeholder="write email..."
+                                required>
+                            <button class="form-btn  margin-auto" type="submit">Send otp</button>
+                </form>
+            </div>
+
         </div>
     </section>
     <% include persists/footer%>
