--- a/views/persists/footer.ejs
+++ b/views/persists/footer.ejs
@@ -1,6 +1,7 @@
 <footer class="container  text-center">
 </footer>
 <script src="/javascripts/password.js"></script>
+<script src="/javascripts/coundown.js"></script>
 </body>
 
 </html>
